Refactored some code and fixed typos